# rawkode-academy

./: .gitignore  .pr_agent.toml  AGENTS.md  CLAUDE.md  CODEOWNERS  GAME.md  deno.json  devenv.nix  devenv.yaml  env.cue  package.json  pnpm-lock.yaml
.buildkite/: pipeline.yml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: claude-changelog.yml  code-rawkode-academy-gitops-oci.yml  games-secrets-of-kubernetes.yaml  infrastructure-dns-pull-request.yml  klustered-dev-default.yml  klustered-dev-pullrequest.yml  klustered-live-default.yml  klustered-live-pullrequest.yml  klustered.dev.yaml  klustered.live.yaml  linear-merge-sync.lock.yml  linear-merge-sync.md  platform-api-gateway.yaml  platform-authentication-rpc.yaml  platform-casting-credits.yaml  platform-chapters.yaml  platform-email-preferences-rpc.yaml  platform-email-service-rpc.yaml  platform-emoji-reactions.yaml  platform-episodes.yaml  platform-people-biographies.yaml  platform-people-links.yaml  platform-people.yaml  platform-service-deploy.yaml  platform-show-hosts.yaml  platform-shows.yaml  platform-technologies.yaml  (+76 more)
content/: AGENTS.md  CLAUDE.md  landscape-sync-report.md  migration-report-2025-12-02.md  package.json  review_technologies.py
cue.mod/: module.cue
dagger/: CLAUDE.md
infrastructure/: CLAUDE.md
projects/rawkode.academy/tasks/video-importer/: a  devenv.yaml  env.cue  migrate_thumbnails_to_webp.py  purge_cache.py  pyproject.toml  standardize_media_names.py  youtube_to_r2.py
projects/rawkode.academy/tasks/video-importer/.claude/: settings.local.json
(+3615 files in other folders)
