[project]
name = "youtube-to-r2"
version = "0.1.0"
description = "Download YouTube videos and upload to Cloudflare R2"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2024.1.0",
    "boto3>=1.42.88",
    "requests>=2.32.5",
    "cuid2>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "google-cloud-run>=0.16.0",
]

[project.scripts]
youtube-to-r2 = "youtube_to_r2:main"